--- a/d-frontend/learnwithus.html
+++ b/d-frontend/learnwithus.html
@@ -1,13 +1,162 @@
 <!DOCTYPE html>
-<html lang="en"> 
-    <head>
-        <meta charset="utf-8" />
-        <meta name="view port" content="width=device-width, initial-scale=1">
-        <title>Learn With Us</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css"
-    </head>
-    <body>
-        <h1 align="center">LET'S LEARN SUSTAINABILITY WITH US!</h1>
+<html lang="en">
 
-    </body>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>learnwithus</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/fonts/font-awesome.min.css">
+    <link rel="stylesheet" href="assets/css/Article-List.css">
+    <link rel="stylesheet" href="assets/css/Bold-BS4-Image-Caption-Hover-Effect-3.css">
+    <link rel="stylesheet" href="assets/css/Card-with-popup-text-effect.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/css/lightbox.min.css">
+    <link rel="stylesheet" href="assets/css/Lightbox-Gallery.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+</head>
+
+<body>
+    <h1 class="text-center" style="height: 72px;"><strong>LET'S LEARN SUSTAINABILTY WITH US!</strong></h1>
+    <div class="container-fluid py-5">
+        <h2 class="text-center" style="height: 0px;"><strong>Categories</strong></h2>
+        <div class="row" style="width: 1105px;height: 4.5px;margin: 142px;padding: 0px;">
+            <div class="col-md-6 mb-lg-0" style="padding: 10px;">
+                <div class="hover hover-3 text-white rounded"><img src="assets/img/climate-crisis-classes.jpeg" alt="image">
+                    <div class="hover-overlay"></div>
+                    <div class="hover-3-content px-5 py-4">
+                        <h2 class="text-uppercase hover-3-title mb-0" style="font-weight: bold;"><span class="font-weight-light"></span>Climate crisis</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-lg-0" style="padding: 10px;">
+                <div class="hover hover-3 text-white rounded"><img src="assets/img/nick-fewings-2lJGRIY5P0-unsplash-scaled.jpeg" alt="image">
+                    <div class="hover-overlay"></div>
+                    <div class="hover-3-content px-5 py-4">
+                        <h2 class="text-uppercase hover-3-title mb-0" style="font-weight: bold;">Anorganic waste</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid py-5">
+        <div class="row" style="width: 1105px;height: 4.5px;margin: 142px;">
+            <div class="col-md-6 mb-lg-0" style="padding: 10px;">
+                <div class="hover hover-3 text-white rounded"><img src="assets/img/22052018091450_1.jpeg" alt="image">
+                    <div class="hover-overlay"></div>
+                    <div class="hover-3-content px-5 py-4">
+                        <h2 class="text-uppercase hover-3-title mb-0" style="font-weight: bold;">organic waste&nbsp;</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-lg-0" style="padding: 10px;">
+                <div class="hover hover-3 text-white rounded"><img src="assets/img/Ilustrasi.jpeg" alt="image">
+                    <div class="hover-overlay"></div>
+                    <div class="hover-3-content px-5 py-4">
+                        <h2 class="text-uppercase hover-3-title mb-0" style="font-weight: bold;">health &amp; beauty&nbsp;</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid py-5">
+        <div class="row" style="width: 1105px;height: 4.5px;margin: 142px;">
+            <div class="col-md-6 mb-lg-0" style="padding: 10px;">
+                <div class="hover hover-3 text-white rounded"><img src="assets/img/how-to-make-house-cleaning-schedule-and-checklist-_-get-set-clean.jpeg" alt="image">
+                    <div class="hover-overlay"></div>
+                    <div class="hover-3-content px-5 py-4">
+                        <h2 class="text-uppercase hover-3-title mb-0" style="font-weight: bold;">house &amp; cleaning&nbsp;</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-lg-0" style="padding: 10px;">
+                <div class="hover hover-3 text-white rounded"><img src="assets/img/TIFTEditorials_HeroImages_GlossaryFeature.jpeg" alt="image">
+                    <div class="hover-overlay"></div>
+                    <div class="hover-3-content px-5 py-4">
+                        <h2 class="text-uppercase hover-3-title mb-0" style="font-weight: bold;">recycle &amp; upcycle&nbsp;</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid py-5">
+        <div class="row" style="width: 1105px;height: 4.5px;margin: 142px;">
+            <div class="col-md-6 mb-lg-0" style="padding: 10px;">
+                <div class="hover hover-3 text-white rounded"><img src="assets/img/3dc5a87a-53d4-4f00-a166-6c668fc12909.jpeg" alt="image">
+                    <div class="hover-overlay"></div>
+                    <div class="hover-3-content px-5 py-4">
+                        <h2 class="text-uppercase hover-3-title mb-0" style="font-weight: bold;">sustainable fashion&nbsp;</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-lg-0" style="padding: 10px;">
+                <div class="hover hover-3 text-white rounded"><img src="assets/img/7160724751_9cb8bdcc37_k.jpeg" alt="image">
+                    <div class="hover-overlay"></div>
+                    <div class="hover-3-content px-5 py-4">
+                        <h2 class="text-uppercase hover-3-title mb-0" style="font-weight: bold;">biodiversity &amp; energy&nbsp;</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="container-fluid py-5">
+        <div class="row" style="width: 1105px;height: 131.5px;margin: 142px;">
+            <div class="col-md-6 mb-lg-0" style="padding: 10px;">
+                <div class="hover hover-3 text-white rounded"><img src="assets/img/How-to-nurture-innovation.jpeg" alt="image">
+                    <div class="hover-overlay"></div>
+                    <div class="hover-3-content px-5 py-4">
+                        <h2 class="text-uppercase hover-3-title mb-0" style="font-weight: bold;">innovation&nbsp;</h2>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 mb-lg-0" style="padding: 10px;">
+                <div class="hover hover-3 text-white rounded"><img src="assets/img/depositphotos_51857569-stock-photo-hands-holding-trivia.jpeg" alt="image">
+                    <div class="hover-overlay"></div>
+                    <div class="hover-3-content px-5 py-4">
+                        <h2 class="text-uppercase hover-3-title mb-0" style="font-weight: bold;">trivia - fun stuffs!&nbsp;</h2>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <section class="article-list"></section>
+        <section class="article-list">
+            <div class="container" style="padding: 108px;width: 1162px;margin: 133px;height: 652.391px;">
+                <div class="intro"></div>
+                <h2 class="text-left">Recent Articles</h2>
+                <div class="row articles">
+                    <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/green-condo-helpful-recycling-tips-640x426.jpeg"></a>
+                        <h3 class="name">How does recycling help the environment?</h3><a class="action" href="#"><i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                    <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/ab446b_dc10f09a919c40b28cd22afc6108171d_mv2.webp"></a>
+                        <h3 class="name">What are 10 ways to recycle development?</h3><a class="action" href="#"><i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                    <div class="col-sm-6 col-md-4 item"><a href="#"><img class="img-fluid" src="assets/img/Cal-Earth-Group-Photo-Nov.2011-640x426.jpg"></a>
+                        <h3 class="name">Could humans really destroy all life on earth?</h3><a class="action" href="#"><i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                    <div class="col" style="padding: -103px;">
+                        <p style="text-align: right;text-decoration: underline;font-weight: bold;">See more</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="photo-gallery">
+            <div class="container">
+                <div class="intro">
+                    <h2 class="text-center">Instagram</h2>
+                </div>
+                <div class="row photos">
+                    <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/desk.jpg"><img class="img-fluid" src="assets/img/Promo%20Ramadhan%20-%201.png"></a></div>
+                    <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/building.jpg"><img class="img-fluid" src="assets/img/277361206_1619981181693055_2770294939921175598_n.webp" style="height: 255px;width: 255px;"></a></div>
+                    <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/loft.jpg"><img class="img-fluid" src="assets/img/277926731_1177744726377170_6906716405700459618_n.jpg"></a></div>
+                    <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/building.jpg"><img class="img-fluid" src="assets/img/278110953_572415047846101_2636681843612284565_n.webp" style="height: 255px;width: 255px;"></a></div>
+                    <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/loft.jpg"></a></div>
+                    <div class="col-sm-6 col-md-4 col-lg-3 item"><a data-lightbox="photos" href="assets/img/desk.jpg"></a></div>
+                </div>
+            </div>
+        </section>
+    </div>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.8.2/js/lightbox.min.js"></script>
+</body>
+
 </html>
