--- a/d-frontend/littleaction.html
+++ b/d-frontend/littleaction.html
@@ -1,24 +1,38 @@
 <!DOCTYPE html>
-<html lang="en"> 
-    <head>
-        <meta charset="utf-8" />
-        <meta name="view port" content="width=device-width, initial-scale=1">
-        <title>Learn With Us</title>
-        <link rel="stylesheet" type="text/css" href="css/style.css"
-    </head>
-    <body>
-        <body>
-            <!--news-->
-            <h1>News</h1>
-            <dif class="news">
-                <a href=""><img src="asset/"/a>
+<html lang="en">
 
-            </dif>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+    <title>littleaction</title>
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/css/styles.css">
+</head>
 
+<body>
+    <h1 style="height: 74px;padding: 19px;transform: translate(145px);"><strong>News</strong></h1>
+    <div class="container" style="width: 715px;padding: -5px;">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/zero-waste-event.png"></div>
+            </div>
+            <div class="col-md-6">
+                <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/img_WEB_GlobalRecyclingIndustryUpdates-730x410.png"></div>
+            </div>
+        </div>
+    </div>
+    <div class="container" style="width: 715px;padding: 13px;">
+        <div class="row">
+            <div class="col-md-6">
+                <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/promo251047897.webp"></div>
+            </div>
+            <div class="col-md-6">
+                <div class="card"><img class="card-img-top w-100 d-block" src="assets/img/istockphoto-1311480759-640x640.jpeg"></div>
+            </div>
+        </div>
+    </div>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+</body>
 
-
-
-    
-        </body>
-    </body>
 </html>
